# Intro-to-Haskell

./: .gitignore  README.md
Haskell Basics/: CH03_reverse.hs  CH03_reverse02.hs  CH04_02_getIfCool.hs  CH04_03_tuple1.hs  CH05_01_recursion.hs  batch 1
TheHaskellBook-project/: ChangeLog.md  README.md  TheHaskellBook-project.cabal  package.yaml  test01.hs  test03.hs
TheHaskellBook-project/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
TheHaskellBook-project/learn-you/: CH05_01_recursion.hs  CH06_01_curried.hs  CH07_01_Modules.hs  CH08_01_TypeClasses.hs  CH14_zippers.hs
app-bundle/: CHANGELOG.md  app-bundle.cabal
app-bundle/app/jetpack/: Jetpack.hs  Main.hs
app-bundle/app/move/: Main.hs  Move.hs
app-bundle/data/: moves.txt  positions.txt
app-bundle/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
app-bundle/dist-newstyle/packagedb/ghc-8.10.4.20210212/: app-bundle-0.1.0.0-inplace-jetpack-lib.conf  package.cache
app-bundle/src/: hamlet.hs
app-bundle/tests/: kleisli-monad-example.hs
app-bundle/tests/jetpack/: JetpackTest.hs
haskell-from-first-principles/: CH04_01_MoodSwing.hs  dirManager.sh  haskell-from-first-principles.cabal
haskell-from-first-principles/chapter01/: README.md
haskell-from-first-principles/chapter01/solutions/: ex01.txt  parametricity01.hs
haskell-from-first-principles/chapter02/: CH02_FunctionWithLet.hs  CH02_FunctionWithWhere.hs  CH02_test02.hs  README.md
haskell-from-first-principles/chapter02/solutions/: ex01.hs  ex01.txt
haskell-from-first-principles/chapter03/: CH03_BuildingFunctions.hs  CH03_print1.hs  README.md
haskell-from-first-principles/chapter03/solutions/: ch03.txt  ex01.hs  ex01.txt
haskell-from-first-principles/chapter04/: CH04_01_patternMatching.hs  CH04_Typeclasses.hs  README.md
haskell-from-first-principles/chapter04/solutions/: ex01.hs  ex01.txt
haskell-from-first-principles/chapter05/: CH05_01_recursion.hs  README.md
haskell-from-first-principles/chapter05/solutions/: Arith3broken_pg235.hs  README.md  Sing_pg234.hs  determineType_pg226.hs  doesItCompile_pg229.hs  ex01.txt  givenTypeWriteFunciton.hs
haskell-from-first-principles/chapter06/: CH06_01_writingTypeclassesInstances.hs  CH06_02_InstancesDispatchedByType_pg304.hs  README.md
haskell-from-first-principles/chapter06/solutions/: Eq_Instances_pg272.hi  Eq_Instances_pg272.hs  MatchTheTypes_pg319.hs  ch06.txt  ex01.txt
haskell-from-first-principles/chapter07/: Arith2.hs  PatternMatchingAgainstDataConstr_pg349.hs  README.md
haskell-from-first-principles/chapter07/solutions/: Arith4_pg402.hs  ArtfulDodgy_pg376.hs  CasePractice_pg364.hs  GuardDuty_pg385.hs  LetsWriteCode_pg402.hs  ex01.txt
haskell-from-first-principles/chapter08/: README.md  SafeDivision.hs  ToyRecursionExamples.hs
haskell-from-first-principles/chapter08/solutions/: DivideBy_pg451.hs  McCarthy_pg453.hs  ReviewingCurrying_pg450.hs  WordNumber_pg453.hs  ex01.txt
haskell-from-first-principles/chapter09/: README.md
haskell-from-first-principles/chapter09/solutions/: Cipher_pg519.hs  DataChar_pg517.hs  EnumFromTo_pg467.hs  Filtering_pg513.hs  OwnFunctions_pg521.hs  OwnFunctions_pg521.txt  PoemLines_pg474.hs  SquareCube_pg484.hs  Zipping_pg517.hs  ex01.txt
haskell-from-first-principles/chapter10/: Fold_details.txt  README.md
haskell-from-first-principles/chapter10/solutions/: DatabaseProcessing_pg566.hs  RewritingFunctions_pg580.hs  Scans_pg578.hs  WarmUp_pg678.hs  ex01.txt
haskell-from-first-principles/chapter11/: BinaryTrees.hs  ConstructingDeconstructingValues_pg642.hs  DecosntructingValues_pg662.hs  README.md
haskell-from-first-principles/chapter11/solutions/: AsPatterns_pg693.hs  Ciphers_pg692.hs  GardenGrow_pg641.hs  HuttonsRazor_pg701.hs  LanguageExercises_pg695.hs  LogicGoats_pg626.hs  PhoneExercise_pg696.hs  PityTheBool_pg629.hs  Programmers_pg657.hs  Vehicles_pg609.hs  ex01.txt
haskell-from-first-principles/chapter12/: EqCaseGuard_pg710.hs  MaybeExamples_pg706.hs  README.md
haskell-from-first-principles/chapter12/solutions/: EitherLibrary_pg740.hs  MaybeLibrary_pg738.hs  (+7 more)
haskell-from-first-principles/chapter13/: README.md
haskell-from-first-principles/chapter13/hangman/: hangman.cabal
haskell-from-first-principles/chapter13/hangman/src/: Main.hs
haskell-from-first-principles/chapter13/hello/: LICENSE  README.md  hello.cabal
haskell-from-first-principles/chapter13/hello/exe/: Main.hs
haskell-from-first-principles/chapter13/hello/src/: DogsRule.hs  Hello.hs  Main.hs
haskell-from-first-principles/chapter14/: README.md
haskell-from-first-principles/chapter15/: Madness_pg923.hs  PatienceQuickCheck_pg930.hs  README.md  TestQuickCheck_pg925.hs
haskell-from-first-principles/chapter16/: EitherFunctors.hs  FlipFunctor.hs  Functors1234.hs  GoodBadUgly.hs  Heisenberg.hs  MaybeFunctors.hs  NaturalTransformations.hs  QuickCheckFuntorInstances.hs  README.md  ReplaceExperiment.hs  SuprisingFunctor.hs
haskell-from-first-principles/chapter17/: Apl1.hs  ApplicativeDef.txt  BadMonoid.hs  EitherVsValidation.hs  MaybeApplicative.hs  README.md  ZipListMonoid.hs
haskell-from-first-principles/chapter18/: README.md
haskell-from-first-principles/chapter19/: README.md
haskell-from-first-principles/chapter20/: README.md
haskell-from-first-principles/chapter21/: README.md
haskell-from-first-principles/chapter22/: README.md
haskell-from-first-principles/chapter23/: README.md
haskell-from-first-principles/chapter24/: README.md
haskell-from-first-principles/chapter25/: README.md
haskell-from-first-principles/chapter26/: README.md
haskell-from-first-principles/chapter27/: README.md
haskell-from-first-principles/chapter28/: README.md
haskell-from-first-principles/chapter29/: README.md
haskell-from-first-principles/chapter30/: README.md
learn-you/: CH08_01_TypeClasses.hs  README.md
learn-you-haskell/: CH06_01_curried.hs  CH08_01_TypeClasses.hs  CH08_02_TypeClasses.hs
pioneers/: english-auction-tested
(+39 files in other folders)
