cabal-version:      2.4
name:               app-bundle
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Igodlab
maintainer:         igodlab@gmail.com
build-Type:         Simple
copyright:          © 2021 Igodlab
license:            Apache-2.0
license-file:       LICENSE

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: 
    CHANGELOG.md
    LICENSE
    README.md
    stack.yaml
    .travis.yml
    package.yaml

data-files:
    data/hamlet.txt
    data/moves.txt
    data/positions.txt

library jetpack-lib
    exposed-modules:  Jetpack
    hs-source-dirs:   app/jetpack
    ghc-options:     -Wall -Werror -Wcompat -Widentities -Wincomplete-uni-patterns -Wincomplete-record-updates -Wno-unused-top-binds -Wno-orphans
    build-depends:    base ^>=4.14.1.0
    default-language: Haskell2010


executable jetpack
    main-is:            Main.hs
    other-modules:      Jetpack
    hs-source-dirs:     app/jetpack

    -- Modules includ  ed in this executable, other than Main.
    -- other-modules:  

    -- LANGUAGE exten  sions used by modules in this package.
    -- other-extensio  ns:
    other-extensions:   DeriveAnyClass
    build-depends:      base ^>=4.14.1.0
                      , fmt >=0.5 && <0.7
                      , containers >=0.5 && <0.7
    ghc-options:     -Wall -Werror -Wcompat -Widentities -Wincomplete-uni-patterns -Wincomplete-record-updates -Wno-unused-top-binds -Wno-orphans
    default-language:   Haskell2010

test-suite jetpack-test
    type:                exitcode-stdio-1.0
    main-is:             JetpackTest.hs
    hs-source-dirs:      tests/jetpack
--    other-modules:       spec.model
--                       , spec.modelwithclose
--                       , spec.trace
--                       , spec.tracewithclose
    ghc-options:        -Wall -Werror -Wcompat -Widentities -Wincomplete-uni-patterns -Wincomplete-record-updates -Wno-unused-top-binds -Wno-orphans
    build-depends:
        base ^>=4.14.1.0 
      , jetpack-lib
      , random >=1.2 
    default-language:    Haskell2010

