Cabal-Version:       >= 1.10
name:                hello
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/Igodlab/Intro-to-Haskell/tree/main/haskell-from-first-principles/chapter13/hello#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Cereal Killer
maintainer:          igodlab@gmail.com
copyright:           2022, Cereal Killer
category:            Web
build-type:          Simple

executable hello
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
