Cabal-Version:       2.4
name:                hello
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/bitemyapp/hello#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Cereal Killer
maintainer:          igodlab@gmail.com
copyright:           2022, Cereal Killer
category:            Web
build-type:          Simple

library 
  hs-source-dirs:      src
  exposed-modules:     Hello
                     , DogsRule
  build-depends:       base ^>=4.14.1.0
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise


executable hello
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base ^>= 4.14.1.0
                     , hello

